# carbonic-c

./: .gitignore  1.crbc  CMakeLists.txt  LICENSE  Makefile  README.md  ast-backup.hpp  ast.hpp  astPrinter.cpp  astPrinter.hpp  driver.cpp  driver.hpp  example.crbc  identifierTable.h  identifierTable.hpp  lexer.h  lexer.l  lexer.out  main.cpp  makefile  output.ll  parser-backup.ypp  parser.y  parser.ypp  prettyPrinter.cpp  prettyPrinter.hpp  program.cpp  program.txt  semantic.cpp  semantic.hpp  test.crbc  test.sh  test.txt  test_lexer.sh  test_parser.sh  tests.sh  tokens.l
code_generator/: codeGenerator.cpp  code_generator.cpp
docs/: TODO.txt  grammar.md
driver/: driver.cpp
include/: Enums.h  ast.hpp  codeGenerator.hpp  driver.hpp  lexer.h  prettyPrinter.hpp  semantic.hpp
lexical_analysis/: lexer.l
printers/: astPrinter.cpp
semantic_analysis/: semantic.cpp
syntax_analysis/: parser.ypp
tests/components/array/: access_array.crbc
tests/components/block/: empty.crbc  shadowing.crbc
tests/components/comparison/: equal.crbc  greater.crbc  greater_equal.crbc  less.crbc  less_equal.crbc  not_equal.crbc
tests/components/for/: for.crbc
tests/components/foreach/: foreach.crbc
tests/components/if/: if_then.crbc  if_then_else.crbc
tests/components/logic/: and.crbc  or.crbc  xor.crbc
tests/components/math/: add.crbc  divide.crbc  mod.crbc  multiply.crbc  power.crbc  subtract.crbc
tests/components/record/: access_record.crbc
tests/components/routine/: single_routine.crbc
tests/components/string/: string.crbc
tests/components/types/: array.crbc  record.crbc  type.crbc
tests/components/variables/: boolean.crbc  integer.crbc  real.crbc  string.crbc
tests/components/while/: while.crbc
tests/inputs/code_generation/expected_outputs/: access_record.txt  binary_search.txt  recursion.txt
tests/inputs/code_generation/programs/: access_array.crbc  access_record.crbc  binary_search.crbc  boolean.crbc  comparison.crbc  fibonnaci.crbc  global.crbc  global_shadowing.crbc  iterative_fibonnaci.crbc  mod.crbc  notEqual.crbc  recursion.crbc  recursive_fibonnaci.crbc  simple.crbc
tests/inputs/components/algorithms/: bubble_sort.crbc  intermediary.crbc  tests_description.txt
tests/inputs/components/array/: access_array.crbc
tests/inputs/components/block/: empty.crbc  shadowing.crbc
tests/inputs/components/comparison/: equal.crbc  greater.crbc  greater_equal.crbc  less.crbc  less_equal.crbc  not_equal.crbc
tests/inputs/components/for/: for.crbc
tests/inputs/components/foreach/: foreach.crbc
tests/inputs/components/if/: if_then.crbc  if_then_else.crbc
tests/inputs/components/logic/: and.crbc  or.crbc  xor.crbc
tests/inputs/components/math/: add.crbc  divide.crbc  mod.crbc  multiply.crbc  power.crbc  subtract.crbc
tests/inputs/components/print/: print.crbc
tests/inputs/components/record/: access_record.crbc
tests/inputs/components/routine/: multiple_routines.crbc  single_routine.crbc
tests/inputs/components/string/: string.crbc
tests/inputs/components/types/: array.crbc  record.crbc  type.crbc
tests/inputs/components/user_types/: array.crbc  record.crbc
tests/inputs/components/variables/: boolean.crbc  integer.crbc  real.crbc  string.crbc
tests/inputs/components/while/: while.crbc
tests/inputs/demo/: multiple_routines.crbc  while.crbc
tests/inputs/invalid/syntax/: bad_decl.crbc  bad_order.crbc  bf.crbc  bs.crbc  f.crbc  g.crbc  missing_end.crbc  p.crbc  undefined_routine.crbc  undefined_var.crbc
tests/inputs/invalid/types/bad_arrays/: bad_array.crbc
tests/inputs/invalid/types/bad_conditionals/: bad_if.crbc  bad_if_2.crbc
tests/inputs/invalid/types/bad_logic/: bad_and.crbc  bad_or.crbc  bad_xor.crbc
tests/inputs/invalid/types/bad_loops/: bad_for.crbc  bad_while.crbc
tests/inputs/invalid/types/bad_math/: bad_add.crbc  bad_divide.crbc  bad_mod.crbc  bad_multiply.crbc  bad_subtract.crbc
tests/inputs/invalid/types/bad_records/: bad_access.crbc  bad_record.crbc
tests/inputs/invalid/types/bad_routines/: bad_params.crbc  bad_return.crbc  bad_return_2.crbc
tests/inputs/invalid/types/bad_vars/: bad_assignment.crbc  bad_assignment_2.crbc
tests/invalid_tests/lexicalErrors/: 1.crbc
tests/invalid_tests/syntaxErrors/: 1.crbc
tests/lexer_outpus/: 1.txt  7.txt  bubble_sort.txt  gcd.txt
tests/lexer_outputs/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  bubble_sort.txt  fibonacci.txt  palindrome.txt
tests/outputs/components/algorithms/: bubble_sort.txt  complex.txt  fibonacci.txt  gcd.txt  intermediary.txt  palindrome.txt  simple.txt
tests/outputs/components/array/: access_array.txt
tests/outputs/components/block/: empty.txt  shadowing.txt
tests/outputs/components/comparison/: equal.txt  greater.txt  greater_equal.txt  less.txt  less_equal.txt  not_equal.txt
tests/outputs/components/for/: for.txt
tests/outputs/components/foreach/: foreach.txt
tests/outputs/components/if/: if_then.txt  if_then_else.txt
tests/outputs/components/logic/: and.txt  or.txt  xor.txt
tests/outputs/components/math/: add.txt  divide.txt  mod.txt  multiply.txt  power.txt  subtract.txt
tests/outputs/components/print/: print.txt
tests/outputs/components/record/: access_record.txt
tests/outputs/components/routine/: multiple_routines.txt  single_routine.txt
tests/outputs/components/string/: string.txt
tests/outputs/components/types/: array.txt  record.txt  type.txt
tests/outputs/components/variables/: boolean.txt  integer.txt  real.txt  string.txt
tests/outputs/components/while/: while.txt
tests/outputs/invalid/lexical/: unknown_token.txt
tests/outputs/invalid/syntax/: basic_functionality.txt  bubble_sort.txt  f.txt  fibonacci.txt  gcd.txt  missing_end.txt  p.txt  palindrome.txt
tests/parser_outputs/: 1.txt  2.txt  3.txt  4.txt  5.txt  7.txt  8.txt  bubble_sort.txt  gcd.txt
tests/valid/: 2.crbc  4.crbc  5.crbc  7.crbc  8.crbc
tests/valid_outputs/: 3.txt  4.txt  5.txt  6.txt  7.txt
tests/valid_tests/: 1.crbc  3.crbc  4.crbc  5.crbc  6.crbc  7.crbc  bubble_sort.crbc  fibonacci.crbc  gcd.crbc  tests_description.txt
